# bot451

./: Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.bot  README.md  entrypoint-backend.sh
.gitea/workflows/: docker-image-build.yml
.github/workflows/: health-check.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/bot_http_backend/: Cargo.toml
crates/bot_http_backend/src/: lib.rs
crates/botbackend/: Cargo.toml
crates/botbackend/src/: lib.rs  parallel_page_worker.rs
crates/proto/: Cargo.toml
crates/proto/src/: command.rs
crates/rest_backend/: Cargo.toml
crates/rest_backend/src/: error.rs  lib.rs  load_page_handler.rs  queue_load_page_handler.rs
crates/sqlite/: Cargo.toml
crates/sqlite/src/: lib.rs  persistent_page_worker.rs  postgres_persistent.rs  sqlite_persistent.rs
crates/utils/: Cargo.toml
crates/utils/src/: hash.rs
