[package]
name = "bot451"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bot"
path = "src/bot/bin/main.rs"

[[bin]]
name = "backend"
path = "src/backend/bin/main.rs"

[workspace]
members = [
    "crates/api",
    "crates/bot_http_backend",
    "crates/botbackend",
    "crates/proto", "crates/rest_backend",
]

[workspace.dependencies]
tokio = { version = "1.29.1", features = ["full"] }
teloxide = { version = "0.12", features = ["macros"] }
anyhow = { version = "1.0" }
tempfile = "3"
async-trait = "0.1.78"
dptree = "0.3.0"
reqwest = { version = "0.12.0", features = ["json"] }
serde_json = "1.0.114"

[dependencies]
tokio.workspace = true
teloxide.workspace = true
anyhow.workspace = true
dptree.workspace = true
botbackend = { path = "crates/botbackend" }
proto = { path = "crates/proto" }
api = { path = "crates/api" }
