[package]
name = "bot451"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bot"
path = "src/bot/bin/main.rs"

[[bin]]
name = "backend"
path = "src/backend/bin/main.rs"

[workspace]
members = [
    "crates/api",
    "crates/bot_http_backend",
    "crates/botbackend",
    "crates/proto",
    "crates/rest_backend",
    "crates/sqlite",
    "crates/utils",
]

[workspace.dependencies]
tokio = { version = "1.29.1", features = ["full"] }
teloxide = { version = "0.12", features = ["macros"] }
anyhow = { version = "1.0" }
async-trait = "0.1.78"
dptree = "0.3.0"
reqwest = { version = "0.12.0", features = ["json"] }
serde_json = "1.0.114"
axum = "0.7.4"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "postgres", "time"] }
sha2 = "0.10.8"
base64 = "0.22.0"
nanoid = "0.4.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
time = { version = "0.3.36" }

[dependencies]
tokio.workspace = true
teloxide.workspace = true
anyhow.workspace = true
dptree.workspace = true
async-trait.workspace = true
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
botbackend = { path = "crates/botbackend" }
#bot_http_backend = { path = "crates/bot_http_backend" }
rest_backend = { path = "crates/rest_backend" }
proto = { path = "crates/proto" }
api = { path = "crates/api" }
sqlite = { path = "crates/sqlite" }
