[package]
name = "bot451"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bot"
path = "src/bot/bin/main.rs"

[[bin]]
name = "backend"
path = "src/backend/bin/main.rs"

[workspace]
members = [
    "crates/api",
    "crates/botbackend",
    "crates/proto",
    "crates/rest_backend",
    "crates/sqlite",
    "crates/utils",
]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
teloxide = { version = "0.17", features = ["macros"] }
anyhow = { version = "1.0" }
async-trait = "0.1.89"
dptree = "0.5.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.143"
axum = "0.8.4"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "postgres", "time"] }
sha2 = "0.10.9"
base64 = "0.22.1"
nanoid = "0.4.0"
clap = { version = "4.5.45", features = ["derive", "env"] }
time = { version = "0.3.41" }
thiserror = { version = "2.0.16" }

[dependencies]
tokio.workspace = true
teloxide.workspace = true
anyhow.workspace = true
dptree.workspace = true
async-trait.workspace = true
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
botbackend = { path = "crates/botbackend" }
rest_backend = { path = "crates/rest_backend" }
proto = { path = "crates/proto" }
api = { path = "crates/api" }
sqlite = { path = "crates/sqlite" }
