[package]
name = "rest_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
api = { path = "../api" }
utils = { path = "../utils" }

[dev-dependencies]
tempfile = "3"